syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.abhijith.echo";

message EchoRequest {
  string message = 1;
}

message EchoResponse{
  string message = 1;
}

service EchoService {
  rpc BidirectionalStreaming (stream EchoRequest) returns (stream EchoResponse);
}